--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   ],
   "scripts": {
     "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.ts-node",
-    "package": "electron-rebuild && electron-forge package",
-    "start": "electron-rebuild && electron-forge start",
+    "package": "electron-forge package",
+    "start": "electron-forge start",
     "test": "jest",
     "make": "electron-forge make --stats-error-details"
   },
@@ -65,6 +65,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.28.0",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@electron-forge/cli": "^7.8.1",
     "@electron-forge/maker-deb": "^7.8.1",
     "@electron-forge/maker-rpm": "^7.8.1",
@@ -95,6 +100,7 @@
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "autoprefixer": "^10.4.21",
+    "babel-loader": "^10.0.0",
     "chalk": "^5.4.1",
     "concurrently": "^9.2.0",
     "core-js": "^3.43.0",
@@ -125,6 +131,7 @@
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.12",
     "terser-webpack-plugin": "^5.3.14",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
@@ -137,6 +144,7 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
+    "@electron/rebuild": "^3.7.2",
     "@electron/remote": "^2.1.2",
     "@headlessui/react": "^2.2.4",
     "@hello-pangea/dnd": "^18.0.1",
