--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     }
   ],
   "scripts": {
-    "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.ts-node",
+    "lint": "eslint . --cache",
+    "format": "prettier --ignore-path .gitignore --write .",
+    "format:check": "prettier --ignore-path .gitignore --check .",
+    "cleanup": "npm run format:check && npm run lint && npm test -- --runInBand --passWithNoTests",
     "package": "electron-forge package",
     "start": "electron-forge start",
     "test": "jest",
@@ -24,16 +27,16 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "cross-env NODE_ENV=development eslint --cache"
+      "eslint --cache"
     ],
     "*.json,.{eslintrc,prettierrc}": [
-      "prettier --ignore-path .eslintignore --parser json --write"
+      "prettier --ignore-path .gitignore --parser json --write"
     ],
     "*.{css,scss}": [
-      "prettier --ignore-path .eslintignore --single-quote --write"
+      "prettier --ignore-path .gitignore --single-quote --write"
     ],
     "*.{html,md,yml}": [
-      "prettier --ignore-path .eslintignore --single-quote --write"
+      "prettier --ignore-path .gitignore --single-quote --write"
     ]
   },
   "jest": {
@@ -113,6 +116,7 @@
     "electron-devtools-installer": "^4.0.0",
     "electron-notarize": "^1.2.2",
     "eslint": "^9.30.1",
+    "eslint-plugin-import": "^2.32.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "husky": "9.1.7",
