make cleanup check formatting only for changed files

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint": "eslint . --cache",
     "format": "prettier --ignore-path .gitignore --write .",
     "format:check": "prettier --ignore-path .gitignore --check .",
-    "cleanup": "npm run format:check && npm run lint && npm test -- --runInBand --passWithNoTests",
+    "format:check:changed": "node scripts/format-check-changed.cjs",
+    "cleanup": "npm run format:check:changed && npm run lint && npm test -- --runInBand --passWithNoTests",
     "package": "electron-forge package",
     "start": "electron-forge start",
     "test": "jest",
