--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^8.2.0",
     "electron-updater": "^6.6.2",
+    "eslint-plugin-import": "^2.32.0",
     "fernet": "^0.3.3",
     "find-process": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^9.1.0",
