--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "@types/terser-webpack-plugin": "^5.2.0",
     "@types/webpack-bundle-analyzer": "^4.7.0",
     "@types/webpack-env": "^1.18.8",
-    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
@@ -172,6 +172,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^8.2.0",
     "electron-updater": "^6.6.2",
+    "eslint-plugin-import": "^2.32.0",
     "fernet": "^0.3.3",
     "find-process": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^9.1.0",
